k8s/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: monorepo-gw-class
spec:
  controllerName: example.com/gateway-controller
